Fix color for coin-supply plotter. Fix color label width. Fix label display logic when selecting market price visibility

--- a/cmd/dcrdata/public/scss/charts.scss
+++ b/cmd/dcrdata/public/scss/charts.scss
@@ -192,6 +192,7 @@
   bottom: 0.5ex;
   padding-left: 1em;
   height: 4px;
+  width: 15px;
   border-bottom-width: 4px;
   border-bottom-style: solid;
 }
